src/test/deca/syntax/valid/classique/test-valid-3.deca
// Description:
//    Test sur les classes
//
// Resultats:
//    aucune sortie
// 
// Historique:
//    cree le 01/01/2025

class A {
    int x = 1;
}